// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<h1
  className="ant-typography {\\"style\\":[null,null]}"
  id="default"
  style={
    Object {
      "WebkitLineClamp": null,
    }
  }
>
  
</h1>
`;

exports[`Render properties.content - value[0] 1`] = `
<h1
  className="ant-typography {\\"style\\":[null,null]}"
  id="properties.content"
  style={
    Object {
      "WebkitLineClamp": null,
    }
  }
>
  Content Test
</h1>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;
